# cli

./: COMPUTE_VERSION.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.txt
.github/workflows/: release.yml  test.yml
src/: config.rs  lib.rs  main.rs
src/commands/: analyze.rs  bundle.rs  generate_completions.rs  serve.rs  version.rs
src/commands/bundle/: custom_process_bundle.rs  param_extractor.rs
src/commands/version/: dependency_graph.rs  dependency_visitor.rs  has_call_to_function_visitor.rs  sdk_version.rs  utils.rs  version_visitor.rs
tests/: mod.rs
tests/params_extraction/: mod.rs
tests/params_extraction/t1/: flow.luau  mod.rs
tests/params_extraction/t10/: flow.luau
tests/params_extraction/t2/: flow.luau  mod.rs
tests/params_extraction/t3/: flow.luau  mod.rs  typestuff.luau
tests/params_extraction/t4/: flow.luau  mod.rs
tests/params_extraction/t5/: flow.luau  mod.rs
tests/params_extraction/t6/: flow.luau  mod.rs
tests/params_extraction/t7/: flow.luau  mod.rs  typestuff.luau
tests/params_extraction/t8/: flow.luau  mod.rs
tests/params_extraction/t9/: flow.luau  mod.rs
