[package]
name = "opacity-cli"
version = "0.1.0"
edition = "2021"
authors = ["OpacityLabs"]
description = "A CLI tool for bundling and analyzing Luau files"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.1", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.20"
which = "7.0.2"
darklua = "0.16.0"
serde_derive = "1.0.217"
clap_complete = "4.5.46"
