[package]
name = "opacity-cli"
version = "0.1.0"
edition = "2021"
authors = ["OpacityLabs"]
description = "A CLI tool for bundling and analyzing Luau files"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.1", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.20"
which = "7.0.2"
darklua = "0.17.1"
serde_derive = "1.0.217"
clap_complete = "4.5.46"
axum = "0.8.3"
tower-http = { version = "0.6.2", features = ["trace"] }
tower = "0.5.2"
tracing = "0.1.41"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
chrono = "0.4.40"
tracing-subscriber = "0.3.19"
notify = "6.1.1"
sha2 = "0.10.9"
